Tweaked about.html.erb

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -20,10 +20,10 @@ x_coord (Longtitude)<br>
 
 <p>
 <h2><a href="api/v1/jp/wifispots/search?s=%E6%96%B0%E5%AE%BF&count=10">/api/v1/[jp/en]/wifispots/search?s=%E6%96%B0%E5%AE%BF&count=10</a></h2>
-Parameters:
-jp/en (Choose language)
-s (Search keyword)
-count (Default is 5)
+Parameters:<br>
+jp/en (Choose language)<br>
+s (Search keyword)<br>
+count (Default is 5)<br>
 </p>
 
 </body>
